# pogo-pvp-analyzer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
pvp/: __init__.py  ai.py  cli.py  data.py  display.py  engine.py  roster.py  sync.py
tests/: conftest.py  test_ai.py  test_cli_skeleton.py  test_data.py  test_display_polish.py  test_engine.py  test_phase10_gaps.py  test_rank_compare.py  test_roster.py  test_sync.py  test_team.py
tests/fixtures/: game-master.json  rankings-gl.json  sample-roster.csv  sample-roster.json
