[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pvp-analyzer"
version = "0.1.0"
description = "A command-line Pokemon GO PVP roster analyzer with Claude-powered natural language queries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Finn Gidden", email = "finn.gidden@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pvp = "pvp.cli:app"

[project.urls]
Homepage = "https://github.com/finngidden/pvp-analyzer"
Repository = "https://github.com/finngidden/pvp-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["pvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
